# DeepSC-Image

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  任务书.docx
.firecrawl/: assignment.md  assignment_clean.md  search_ai_breakthroughs.json  search_ai_may2026.json  search_ai_recent.json  search_claude4.json  search_deepseek.json  search_gemini_recent.json
configs/: eval_kodak.yaml  gui.yaml  train_cifar10_awgn.yaml  train_cifar10_rayleigh.yaml
outputs/eval_kodak/: metrics.json
outputs/paper_awgn_compression/: commands.txt  manifest.json  selected_checkpoints.json  sem_16_command.txt  sem_32_command.txt  sem_64_command.txt
outputs/semantic_channel_compare_awgn_ts_05080123/: semantic_channels_comparison.csv
outputs/semantic_channel_compare_rayleigh_ts_05080124/: semantic_channels_comparison.csv
scripts/: generate_thesis_docx.py
src/deepsc_image/: __init__.py  app.py  baseline.py  benchmark_training.py  channels.py  compare_semantic_channels.py  data.py  evaluate.py  infer.py  inference.py  interactive_cli.py  losses.py  metrics.py  model.py  smoke_test.py  train.py  utils.py
tests/: test_app_checkpoint_loading.py  test_baseline.py  test_cli_config.py  test_compare_semantic_channels.py  test_eval_artifacts.py  test_inference.py  test_interactive_cli.py  test_metrics.py  test_train_artifacts.py  test_training_benchmark.py  test_training_speed_config.py
tmp_check/: 19464_任务书.txt  2084594_论文初稿-基于深度语义通信的图像鲁棒传输系统设计与实现.txt  285177_论文写作参考模板.txt  5900759_论文正稿-基于深度语义通信的图像鲁棒传输系统设计与实现.txt  92589_开题报告.txt
tmp_check/axis_eval_probe/: metrics.csv  (+2 more)
(+230 files in other folders)
